--- a/Combined+Pages.html
+++ b/Combined+Pages.html
@@ -236,8 +236,7 @@ them to a Github branch. If you used the <code>foundweekends/giter8.g8</code> te
 recommended above, it should already be configured.
 </p><p>If you need to upgrade an existing template project to the current plugin, you can
 add it as a source dependency in <code>project/giter8.sbt</code>:
-</p><pre><code class="prettyprint lang-scala">// should not use 0.8.0 https://github.com/foundweekends/giter8/issues/292
-addSbtPlugin(&quot;org.foundweekends.giter8&quot; % &quot;sbt-giter8&quot; % &quot;0.7.2&quot;)
+</p><pre><code class="prettyprint lang-scala">addSbtPlugin(&quot;org.foundweekends.giter8&quot; % &quot;sbt-giter8&quot; % &quot;0.9.0&quot;)
 </code></pre><p>When you enter sbt’s shell in the base directory of a
 template project that is configured to use this plugin, the action
 <code>g8Test</code> will apply the template in the default output directory
@@ -257,7 +256,7 @@ runtime. When you’re ready, add your template project to the
 <a href="http://github.com/foundweekends/giter8/wiki/giter8-templates">the wiki</a> so other giter8 users can find it.
 </p><h2 id="Scaffolding+plugin">Scaffolding plugin<a href="#Scaffolding+plugin" class="header-link"><span class="header-link-content">&nbsp;</span></a></h2><p>Giter8 supplies an sbt plugin for creating and using scaffolds.
 </p><h3 id="Using+the+scaffold+plugin">Using the scaffold plugin<a href="#Using+the+scaffold+plugin" class="header-link"><span class="header-link-content">&nbsp;</span></a></h3><p>Add the following lines in <code>project/scaffold.sbt</code>
-</p><pre><code class="prettyprint lang-scala">addSbtPlugin(&quot;org.foundweekends.giter8&quot; % &quot;sbt-giter8-scaffold&quot; % &quot;0.8.0&quot;)
+</p><pre><code class="prettyprint lang-scala">addSbtPlugin(&quot;org.foundweekends.giter8&quot; % &quot;sbt-giter8-scaffold&quot; % &quot;0.9.0&quot;)
 </code></pre><p>Once done, the  <code>g8Scaffold</code> command can be used in the sbt shell.
 Use TAB completion to discover available templates.
 </p><pre><code class="">&gt; g8Scaffold &lt;TAB&gt;
@@ -287,16 +286,7 @@ to try out your changes before you open a pull request. This is how you do it.
 about conscript on its [official page].
 </p><h4 id="Fixing+%3A">Fixing <code>PATH</code>:<a href="#Fixing+%3A" class="header-link"><span class="header-link-content">&nbsp;</span></a></h4><p>Before you install giter8 with conscript, you need to ensure, that
 conscript directory has higher precedence than default installation path.
-</p><p>You can either delete existing version of giter8, or change <code>PATH</code> variable such that 
-<code>~/.conscript/bin</code> is before.
-</p><h4 id="To+install+local+version%3A">To install local version:<a href="#To+install+local+version%3A" class="header-link"><span class="header-link-content">&nbsp;</span></a></h4><ul><li>Change <code>g8version</code> in <code>build.sbt</code> i.e. by adding <code>&quot;-SNAPSHOT&quot;</code>;
-</li><li>Run <code>publishLocal</code> from sbt;
-</li><li>From a shell session run <code>cs --local foundweekends/giter8/&lt;YOUR_VERSION&gt;</code>. 
-Use the version number you just wrote in <code>build.sbt</code>.
-</li></ul><h4 id="To+refresh%3A">To refresh:<a href="#To+refresh%3A" class="header-link"><span class="header-link-content">&nbsp;</span></a></h4><ul><li>Run <code>publishLocal</code> from sbt again;
-</li><li>From a shell session run <code>cs --clean-boot</code>.
-</li></ul><h4 id="To+get+back+to+normal+version%3A">To get back to normal version:<a href="#To+get+back+to+normal+version%3A" class="header-link"><span class="header-link-content">&nbsp;</span></a></h4><p>From a shell session run <code>cs foundweekends/giter8</code>.
-</p>
+</p><p>You can either delete existing version of giter8, or change `</p>
           </div>
         </div>
         <div class="header">
