--- a/setup.html
+++ b/setup.html
@@ -47,12 +47,13 @@ Once <code>cs</code> is on your path, you can install giter8 with this command:
 </code></pre><p>and update it using:
 </p><pre><code>$ cs update g8
 </code></pre><h4 id="Manual">Manual<a href="#Manual" class="header-link"><span class="header-link-content">&nbsp;</span></a></h4><p>It’s possible to manually download and install giter8 directly from Maven Central:
-</p><pre><code>$ curl https://repo1.maven.org/maven2/org/foundweekends/giter8/giter8-bootstrap_2.12/0.13.1/giter8-bootstrap_2.12-0.13.1.sh &gt; ~/bin/g8
+</p><pre><code>$ curl https://repo1.maven.org/maven2/org/foundweekends/giter8/giter8-bootstrap_2.12/0.14.0/giter8-bootstrap_2.12-0.14.0.sh &gt; ~/bin/g8
 $ chmod +x ~/bin/g8
 </code></pre><p>Replace <code>~/bin/</code> with anything that is on your <code>PATH</code>. To make sure everything is working, try running <code>g8</code> with no
 parameters, you should see
 </p><pre><code>Error: Missing argument &lt;template&gt;
-Try --help for more information. </code></pre><div class="bottom nav">
+Try --help for more information.
+</code></pre><div class="bottom nav">
                 <div class="row">
                   <div class="col-md-auto">
                     <a href="usage.html">
